Implement delayed ring message, add message processed event and improve RPC