@@ -54,6 +54,7 @@ dependencies {
 
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     compileOnly 'javax.portlet:portlet-api:3.0.1'
+    implementation 'org.glassfish.main.javaee-api:javax.jws:3.1.2.2'
 
     //implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
@@ -80,6 +81,7 @@ gretty {
     httpPort = 8080
     contextPath = '/'
     //loggingLevel = 'ALL'
+    jvmArgs = ['--enable-preview']
 }
 
 java {
